# monogram

./: .gitattributes  .gitignore  .gitmodules  COMPLETENESS.md  HIGHLIGHT-ISSUES-SURVEY.md  KNOWN-GAPS.md  README.md  ROADMAP.md  TESTING.md  TOTAL-PARSING.md  html.cst-match.ts  html.cst-types.ts  html.language-configuration.json  html.monarch.json  html.tmLanguage.json  html.ts  javascript.cst-match.ts  javascript.cst-types.ts  javascript.language-configuration.json  javascript.monarch.json  javascript.tmLanguage.json  javascript.ts  javascriptreact.cst-match.ts  javascriptreact.cst-types.ts  javascriptreact.monarch.json  javascriptreact.tmLanguage.json  javascriptreact.ts  jsx.ts  package-lock.json  package.json  tsconfig.json  typescript.cst-match.ts  typescript.cst-types.ts  typescript.monarch.json  typescript.tmLanguage.json  typescript.ts  typescriptreact.cst-match.ts  typescriptreact.cst-types.ts  typescriptreact.language-configuration.json  typescriptreact.monarch.json  (+14 more)
docs/: COMPLETENESS.md  SHAPE.md  upstream-issues.md
examples/: altjs.ts  arrowjs.ts  calc.ts  javascript.cst-types.ts  javascript.language-configuration.json  javascript.monarch.json  javascript.tmLanguage.json  javascript.ts  javascriptreact.cst-types.ts  javascriptreact.ts  jsx.ts  ledjs.ts  minijs.ts  noinjs.ts  nudjs.ts  postjs.ts  regexjs.ts  richtokens.ts  seqjs.ts  sljs.ts  templatejs.ts  tsx.cst-types.ts  tsx.monarch.json  tsx.tmLanguage.json  tsx.ts  typescript.cst-types.ts  typescript.monarch.json  typescript.ts  (+4 more)
test/oxc-parse-bench/: Cargo.toml
test/oxc-parse-bench/src/: main.rs
(+244 files in other folders)
