# Native oxc parser bench for test/profile-portable-peers.mjs (stdin → N → ms/iter).
# Pinned to oxc 0.126 (rustc 1.92+). oxc 0.137 needs rustc 1.94 — bump versions after upgrading.
[package]
name = "oxc-parse-bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
oxc_allocator = "0.126.0"
oxc_parser = { version = "0.126.0", features = ["regular_expression"] }
oxc_span = "0.126.0"
